--- a/leaflet/map.html
+++ b/leaflet/map.html
@@ -1,18 +1,66 @@
 <!DOCTYPE html>
 <html style="height:100%;">
- <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="title" content="MACSUR partners webmap" />
-  <meta name="robots" content="index,follow" /> 
-  <meta name="author" content="Julien" , julien_wa@yahoo.fr />
-  <script src="lib/leaflet.js"></script>
-  <script type="text/javascript" src="geojson/4filsAymon.geojson.js"></script> 
-  <script type="text/javascript" src="map.js" ></script> 
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
-  <link rel="stylesheet" href="lib/leaflet.css" />
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="title" content="MACSUR partners webmap" />
+    <meta name="robots" content="index,follow" /> 
+    <meta name="author" content="julien" , julien_wa@yahoo.fr />
+    <link rel="stylesheet" href="css/style.css" type="text/css" /> 
+    <link rel="stylesheet" href="lib/leaflet.css" />
+    <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css">
   </head>
   <body style="height:100%;" onload="init()"> 
-   <div style="width:100%; height:100%;" id="map"></div>
+    <div style="width:100%; height:100%;" id="map"></div>
+    <div id="list">
+      <ul>
+        <li id="vtt10km">
+          <span>10 km</span>
+          <button class="btn" onclick="javascript:toggleLayer10km();">ON</button>
+          <span><a target="_blank" href="gpx/VTT Marbehan 10km.gpx">GPX</a></span>
+        </li>
+        <li id="vtt20km">
+          <span >20 km</span>
+          <button class="btn" onclick="javascript:toggleLayer20km();">ON</button>
+          <span><a target="_blank" href="gpx/VTT Marbehan 20km.gpx">GPX</a></span>
+        </li>
+        <li id="vtt27km">
+          <span >27 km</span>
+          <button class="btn" onclick="javascript:toggleLayer27km();">ON</button>
+          <span><a target="_blank" href="gpx/VTT Marbehan 27km.gpx">GPX</a></span>
+        </li>
+        <li id="vtt39km">
+          <span >39 km</span>
+          <button class="btn" onclick="javascript:toggleLayer39km();">ON</button>
+          <span><a target="_blank" href="gpx/VTT Marbehan 39km.gpx">GPX</a></span>
+        </li>
+        <li id="vtt54km">
+          <span >54 km</span>
+          <button class="btn" onclick="javascript:toggleLayer54km();">ON</button>
+          <span><a target="_blank" href="gpx/VTT Marbehan 54km.gpx">GPX</a></span>
+        </li>
+      </ul>    
+    </div>
+    <script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-25564161-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+    </script>
+    <script type="text/javascript" src="lib/jquery-1.11.3.min.js"></script>
+    <script type="text/javascript" src="lib/bootstrap-3.3.6-dist/js/bootstrap.js"></script>
+    <script src="lib/leaflet.js"></script>
+    <script type="text/javascript" src="map.js" ></script> 
+    <script type="text/javascript" src="geojson/4filsAymon.geojson.js"></script> 
+    <script type="text/javascript" src="geojson/MarbehanVTT_10km.geojson.js"></script> 
+    <script type="text/javascript" src="geojson/MarbehanVTT_20km.geojson.js"></script>
+    <script type="text/javascript" src="geojson/MarbehanVTT_27km.geojson.js"></script>
+    <script type="text/javascript" src="geojson/MarbehanVTT_39km.geojson.js"></script>
+    <script type="text/javascript" src="geojson/MarbehanVTT_54km.geojson.js"></script>
   </body>
 </html>
 
