last modifs -css

--- a/leaflet/map.html
+++ b/leaflet/map.html
@@ -2,9 +2,9 @@
 <html style="height:100%;">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="title" content="MACSUR partners webmap" />
+    <meta name="title" content="VTT Marbehan" />
     <meta name="robots" content="index,follow" /> 
-    <meta name="author" content="julien" , julien_wa@yahoo.fr />
+    <meta name="author" content="julien" , juminet@gmail.com />
     <link rel="stylesheet" href="css/style.css" type="text/css" /> 
     <link rel="stylesheet" href="lib/leaflet/leaflet.css" />
     <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css">
